css, jsのキャッシュ対策

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <meta name="description" content="川越のデザイン会社">
 <meta name="keywords" content="ホームページ制作,広報,コンサルテング,川越経済新聞">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="fixmenu_pagetop.css">
-<script type="text/javascript" src="js/openclose.js"></script>
-<script type="text/javascript" src="js/fixmenu.js"></script>
-<script type="text/javascript" src="js/fixmenu_pagetop.js"></script>
-<script type="text/javascript" src="js/ddmenu_min.js"></script>
-<script type="text/javascript" src="js/vivus.js"></script>
+<link rel="stylesheet" href="style.css?124234">
+<link rel="stylesheet" href="fixmenu_pagetop.css?124234">
+<script type="text/javascript" src="js/openclose.js?124234"></script>
+<script type="text/javascript" src="js/fixmenu.js?124234"></script>
+<script type="text/javascript" src="js/fixmenu_pagetop.js?124234"></script>
+<script type="text/javascript" src="js/ddmenu_min.js?124234"></script>
+<script type="text/javascript" src="js/vivus.js?124234"></script>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
