css　不要なもの削除

--- a/pages/service.html
+++ b/pages/service.html
@@ -72,10 +72,7 @@
 
 <h3>サービス内容のご案内</h3>
 
-<!--トップからのmenu1へのリンク先-->
-<span id="menu1" class="link"></span>
-
-<div class="list2">
+<div class="service">
     <figure><a href="./business.html"><img src="../images/kouho.jpg" alt="広報支援"></a></figure>
     <div class="text">
         <h4>広報支援</h4>
@@ -109,10 +106,7 @@
     </div>
 </div>
 
-<!--トップからのmenu2へのリンク先-->
-<span id="menu2" class="link"></span>
-
-<div class="list2">
+<div class="service">
     <figure><a href="./consulting.html"><img src="../images/yorozu.jpg" alt="よろず相談"></a></figure>
     <div class="text">
     <h4>よろず相談</h4>
@@ -132,10 +126,7 @@
     </div>
     </div>
 
-<!--トップからのmenu3へのリンク先-->
-<span id="menu3" class="link"></span>
-
-<div class="list2">
+<div class="service">
     <figure><a href="./lifestyle.html"><img src="../images/kawara.jpg" alt="かわら版"></a></figure>
     <div class="text">
     <h4>かわら版</h4>
