WORKS インタビュー　更新

--- a/pages/works.html
+++ b/pages/works.html
@@ -68,12 +68,31 @@
 
 <section>
 
-<h2 class="type2">WORKS<span>制作実績</span></h2>
+<h2 class="works">WORKS<span>制作実績</span></h2>
+
+<h3>制作後インタビュー</h3>
+
+<div class="works_iv_box">
+    <div class="works_iv_item">
+        <figure><img src="../images/nico_iv.jpg" alt=""></figure>
+            <h4>利用者・求職者の「安心」のために！　「ホームページリニューアル」の必要性</h4>
+            <p>利用者様がホームページを見て信頼できる事業所かどうかを判断される場合もありますし、求職の方には自社の良さや雰囲気を伝えられるので、ホームページのリニューアルを考えていました。また、レイアウトの改善や、ブログ……</p>
+    </div>
+    
+    <div class="works_iv_item">
+        <figure><img src="../images/powerdryer_iv.jpg" alt=""></figure>
+        <h4>「未来へ繋ぐ」「時代と共に成長する」ホームページ制作で見えた、本当に伝えたいこと</h4>
+        <p>インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。</p>
+    </div>
+    
+    <div class="works_iv_item">
+        <figure><img src="../images/giv_iv.jpg" alt=""></figure>
+        <h4>「川越から世界へ」CEOが目指す先とは　第一歩となるホームページリニューアルの裏側も大公開</h4>
+        <p>CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」</p>
+    </div>
+</div>
 
 <h3>私たちの制作や取り組みの一部をご紹介いたします。</h3>
-
-<!--トップからのmenu1へのリンク先-->
-<span id="menu1" class="link"></span>
 
 <div class="works-item">
     <figure><img src="../images/sharepages.jpg" alt="sharepages"></figure>
@@ -140,6 +159,7 @@
 </div>
 <!--/.inner-->
 
+</section>
 <footer>
 
 <ul id="footermenu">
