--- a/pages/business.html
+++ b/pages/business.html
@@ -63,8 +63,57 @@
 </ul>
 </nav>
 
-<div class="inner" id="first">
+<div class="inner" id="business">
 <div class="contents">
+
+    <h1><img src="../images/business_ol.svg" alt="広報支援"></h1>
+    <div class="text">
+    <h3>お客様の大切な情報を、たくさんの方へお届けします。</h3>
+    <p>GIVは、お客様の広報部としての活動を支援します。広報とは、「広く情報を知らせること」です。その方法には、ホームページや、ランディングページなどのWEBサイトを制作することや、カタログやチラシなどの紙媒体の制作、SNSなどのメディアの利用など様々な方法が考えられます。
+    </p>
+    <p>GIVは、お客様の思いをお伺いし、最も効果的な方法をご提案します。</p>
+    </div>
+
+    <section>
+    <h3>1.受託開発</h3>
+    <p>個別にお客様のご要件をお伺いしてご希望にそった納品物を制作します。競合他社と比べて決して安くないと思いますが、弊社はお客様との関係を大切にしています。
+    </p>
+    <h4>料金表</h4>
+    <table>
+        <tr>
+            <td>ホームページ、ランディングページ</td>
+            <td>500,000円～</td>
+        </tr>
+        <tr>
+            <td>ロゴ、バナー</td>
+            <td>10,000円〜</td>
+        </tr>
+        <tr>
+            <td>会社案内、製品カタログ・パンフレット</td>
+            <td>10,000円〜</td>
+        </tr>
+        <tr>
+            <td>動画制作</td>
+            <td>10,000円〜</td>
+        </tr>
+        <tr>
+            <td>SNS運用支援</td>
+            <td>個別相談</td>
+        </tr>
+    </table>
+    <h4>ご依頼から納品まで</h4>
+    <div class="business-item">
+        <figure><img src="../images/i_ol.svg" alt="流れ1"></figure>
+        <div class="text">
+            <h4>お問い合わせ・ヒアリング</h4>
+            <div>
+                <p>お客様の思いをお聞かせください。「現状はどうなっていて、何を課題だと考えているか？」「自社の強みは何か？」、「伝えたい人はだれか？」を、まずは洗い出して頂きます。この洗い出しが、業務のある中で大変な作業になる場合がありますが、「なんとなく格好を良くして欲しい。」「売り上げが伸びればよい」「手間かけたくない」という情報では、お受けでき兄場合もあります。
+               </p>
+            </div>
+        </div>
+    </div>
+    </section>
+
 </div>
 <!--/.contents-->
 </div>
