--- a/pages/business.html
+++ b/pages/business.html
@@ -107,7 +107,73 @@
         <div class="text">
             <h4>お問い合わせ・ヒアリング</h4>
             <div>
-                <p>お客様の思いをお聞かせください。「現状はどうなっていて、何を課題だと考えているか？」「自社の強みは何か？」、「伝えたい人はだれか？」を、まずは洗い出して頂きます。この洗い出しが、業務のある中で大変な作業になる場合がありますが、「なんとなく格好を良くして欲しい。」「売り上げが伸びればよい」「手間かけたくない」という情報では、お受けでき兄場合もあります。
+                <p>お客様の思いをお聞かせください。「現状はどうなっていて、何を課題だと考えているか？」「自社の強みは何か？」、「伝えたい人はだれか？」を、まずは洗い出して頂きます。この洗い出しが、業務のある中で大変な作業になる場合がありますが、「なんとなく格好を良くして欲しい。」「売り上げが伸びればよい」「手間かけたくない」という情報では、お受けできない場合もあります。
+               </p>
+            </div>
+        </div>
+    </div>
+    <div class="triangle">&#9660</div>
+    <div class="business-item">
+        <figure><img src="../images/ro_ol.svg" alt="流れ2"></figure>
+        <div class="text">
+            <h4>ご提案・お見積もり</h4>
+            <div>
+                <p>お客様の思いを形にする施策についてご提案します。ご予算と、まず最初に解決すべき課題をお客様と一緒に確認します。
+               </p>
+            </div>
+        </div>
+    </div>
+    <div class="triangle">&#9660</div>
+    <div class="business-item">
+        <figure><img src="../images/ha_ol.svg" alt="流れ3"></figure>
+        <div class="text">
+            <h4>デザインのご提案</h4>
+            <div>
+                <p>いくつかのパターンでご提案します。その中から、お客様のイメージに近いものを選択いただき、選んでいただいたデザインをベースに修正を重ねて完成させていきます。事前のヒアリングにて、希望のデザインを伺いますので、細かくご意見を頂けますとスムーズに進められます。
+               </p>
+            </div>
+        </div>
+    </div>
+    <div class="triangle">&#9660</div>
+    <div class="business-item">
+        <figure><img src="../images/ni_ol.svg" alt="流れ4"></figure>
+        <div class="text">
+            <h4>開発・入稿</h4>
+            <div>
+                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
+               </p>
+            </div>
+        </div>
+    </div>
+    <div class="triangle">&#9660</div>
+    <div class="business-item">
+        <figure><img src="../images/ho_ol.svg" alt="流れ4"></figure>
+        <div class="text">
+            <h4>テスト</h4>
+            <div>
+                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
+               </p>
+            </div>
+        </div>
+    </div>
+    <div class="triangle">&#9660</div>
+    <div class="business-item">
+        <figure><img src="../images/he_ol.svg" alt="流れ4"></figure>
+        <div class="text">
+            <h4>納品・公開</h4>
+            <div>
+                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
+               </p>
+            </div>
+        </div>
+    </div>
+    <div class="triangle">&#9660</div>
+    <div class="business-item">
+        <figure><img src="../images/to_ol.svg" alt="流れ5"></figure>
+        <div class="text">
+            <h4>開発・入稿</h4>
+            <div>
+                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
                </p>
             </div>
         </div>
