--- a/pages/business.html
+++ b/pages/business.html
@@ -68,7 +68,7 @@
 
     <h1><img src="../images/business_ol.svg" alt="広報支援"></h1>
     <div class="text">
-    <h3>お客様の大切な情報を、たくさんの方へお届けします。</h3>
+    <h2>お客様の大切な情報を、たくさんの方へお届けします。</h2>
     <p>GIVは、お客様の広報部としての活動を支援します。広報とは、「広く情報を知らせること」です。その方法には、ホームページや、ランディングページなどのWEBサイトを制作することや、カタログやチラシなどの紙媒体の制作、SNSなどのメディアの利用など様々な方法が考えられます。
     </p>
     <p>GIVは、お客様の思いをお伺いし、最も効果的な方法をご提案します。</p>
@@ -103,81 +103,96 @@
     </table>
     <h4>ご依頼から納品まで</h4>
     <div class="business-item">
-        <figure><img src="../images/i_ol.svg" alt="流れ1"></figure>
+        <div class="flow">
+            <figure><img src="../images/i_ol.svg" alt="流れ1"></figure>
+            <h5>お問い合わせ・ヒアリング</h5>
+        </div>
         <div class="text">
-            <h4>お問い合わせ・ヒアリング</h4>
-            <div>
                 <p>お客様の思いをお聞かせください。「現状はどうなっていて、何を課題だと考えているか？」「自社の強みは何か？」、「伝えたい人はだれか？」を、まずは洗い出して頂きます。この洗い出しが、業務のある中で大変な作業になる場合がありますが、「なんとなく格好を良くして欲しい。」「売り上げが伸びればよい」「手間かけたくない」という情報では、お受けできない場合もあります。
                </p>
-            </div>
         </div>
     </div>
     <div class="triangle">&#9660</div>
     <div class="business-item">
-        <figure><img src="../images/ro_ol.svg" alt="流れ2"></figure>
+        <div class="flow">
+            <figure><img src="../images/ro_ol.svg" alt="流れ2"></figure>
+            <h5>ご提案・お見積もり</h5>
+        </div>
         <div class="text">
-            <h4>ご提案・お見積もり</h4>
-            <div>
-                <p>お客様の思いを形にする施策についてご提案します。ご予算と、まず最初に解決すべき課題をお客様と一緒に確認します。
-               </p>
-            </div>
+            <p>お客様の思いを形にする施策についてご提案します。ご予算と、まず最初に解決すべき課題をお客様と一緒に確認します。
+            </p>
         </div>
     </div>
     <div class="triangle">&#9660</div>
     <div class="business-item">
-        <figure><img src="../images/ha_ol.svg" alt="流れ3"></figure>
+        <div class="flow">
+            <figure><img src="../images/ha_ol.svg" alt="流れ3"></figure>
+            <h5>デザインのご提案</h5>
+        </div>
         <div class="text">
-            <h4>デザインのご提案</h4>
-            <div>
-                <p>いくつかのパターンでご提案します。その中から、お客様のイメージに近いものを選択いただき、選んでいただいたデザインをベースに修正を重ねて完成させていきます。事前のヒアリングにて、希望のデザインを伺いますので、細かくご意見を頂けますとスムーズに進められます。
-               </p>
-            </div>
+            <p>いくつかのパターンでご提案します。その中から、お客様のイメージに近いものを選択いただき、選んでいただいたデザインをベースに修正を重ねて完成させていきます。事前のヒアリングにて、希望のデザインを伺いますので、細かくご意見を頂けますとスムーズに進められます。
+            </p>
         </div>
     </div>
     <div class="triangle">&#9660</div>
     <div class="business-item">
-        <figure><img src="../images/ni_ol.svg" alt="流れ4"></figure>
+        <div class="flow">
+            <figure><img src="../images/ni_ol.svg" alt="流れ4"></figure>
+            <h5>開発・入稿</h5>
+        </div>
         <div class="text">
-            <h4>開発・入稿</h4>
-            <div>
-                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
-               </p>
-            </div>
+            <p>デザインをご確認いただき、<br>
+                Webページ：コーディング、システムの開発を行います<br>
+                印刷物：印刷所への入稿、あるいは納品データの準備を行います。
+            </p>
         </div>
     </div>
     <div class="triangle">&#9660</div>
     <div class="business-item">
-        <figure><img src="../images/ho_ol.svg" alt="流れ4"></figure>
+        <div class="flow">
+            <figure><img src="../images/ho_ol.svg" alt="流れ5"></figure>
+            <h5>テスト</h5>
+        </div>
         <div class="text">
-            <h4>テスト</h4>
-            <div>
-                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
-               </p>
-            </div>
+            <p>Webページの場合はお客様と一緒にテストを行います。実際にブラウザで閲覧しながら、バグや内容のチェックを行います。
+            </p>
         </div>
     </div>
     <div class="triangle">&#9660</div>
     <div class="business-item">
-        <figure><img src="../images/he_ol.svg" alt="流れ4"></figure>
+        <div class="flow">
+            <figure><img src="../images/he_ol.svg" alt="流れ6"></figure>
+            <h5>納品・公開</h5>
+        </div>
         <div class="text">
-            <h4>納品・公開</h4>
-            <div>
-                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
-               </p>
-            </div>
+            <p>完成したWebページの公開、印刷物・データの納品をいたします。
+            </p>
         </div>
     </div>
     <div class="triangle">&#9660</div>
     <div class="business-item">
-        <figure><img src="../images/to_ol.svg" alt="流れ5"></figure>
+        <div class="flow">
+            <figure><img src="../images/to_ol.svg" alt="流れ7"></figure>
+            <h5>アフターフォロー</h5>
+        </div>
         <div class="text">
-            <h4>開発・入稿</h4>
-            <div>
-                <p>いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。いい感じの文章。
-               </p>
-            </div>
+            <p>弊社の広報支援は、納品・公開後も続きます。制作物の効果や反響などを分析し、次なる広報活動の支援を行います。
+            </p>
         </div>
     </div>
+    </section>
+    <section>
+        <h3>2.サービス提供</h3>
+        <h4>SharePages（シェアページ）</h4>
+        <p>ホームページを制作したいけど、「時間がない。」「お金がない。」「人手がたりない」というお客様に、デザインを選択して頂き、掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。</p>
+            
+        <p>こんな方に最適です。</p>
+        <ul>
+            <li>・起業したばかり（スタートアップ）で、銀行口座の開設のためにも早くホームページを公開したい。</li>
+            <li>・ホームページは、連絡先の公開や、所在確認程度の利用しか考えていないので、お金はなるべくかけたくない。</li>
+            <li>・ホームページ制作における、費用対効果がわからない。</li>
+        </ul>
+        <div class="sharepages"><a src="https://www.sharepages.jp/"><img src="../images/sharepages.jpg" alt="SharePages（シェアページ）"></a></div>
     </section>
 
 </div>
