--- a/pages/consulting.html
+++ b/pages/consulting.html
@@ -63,8 +63,36 @@
 </ul>
 </nav>
 
-<div class="inner" id="first">
+<div class="inner" id="consulting">
 <div class="contents">
+
+    <h1><img src="../images/consulting_ol.svg" alt="よろず相談"></h1>
+    <div class="text">
+    <h2>コンサルティングサービス</h2>
+    <p>営業や店舗を運営していく中で、様々な課題に直面することがあると思います。その中には、専門士業や、地域の窓口に相談した方が良い内容もあるかと思います。<br>
+    弊社は、ITを通じて、お客様の課題が解決出来ないか、という視点でのご相談を承ることが出来ることが強みですが、税理士、社労士、行政書士や、それぞれの専門家と連携して、「こうした方が良い」というアドバイスではなく、「実際にどう解決していくか」を一緒に考えます。     
+    </p>
+    </div>
+
+    <h4>料金表</h4>
+    <table>
+        <tr>
+            <td>個別相談（対面）</td>
+            <td>初回相談料は無料です。まずはお問い合わせください。</td>
+        </tr>
+        <tr>
+            <td>個別相談（オンライン）</td>
+            <td>初回相談料は無料です。まずはお問い合わせください。</td>
+        </tr>
+        <tr>
+            <td>グループ勉強会（対面）</td>
+            <td>初回相談料は無料です。まずはお問い合わせください。</td>
+        </tr>
+        <tr>
+            <td>グループ勉強会（オンライン）</td>
+            <td>初回相談料は無料です。まずはお問い合わせください。</td>
+        </tr>
+    </table>
 </div>
 <!--/.contents-->
 </div>
