--- a/pages/service.html
+++ b/pages/service.html
@@ -68,84 +68,91 @@
 
 <section>
 
-<h2 class="type2">SERVICE<span>サービス内容</span></h2>
-
-<h3>サービス内容のご案内</h3>
+<h1>SERVICE</h1>
 
 <div class="service">
-    <figure><a href="./business.html"><img src="../images/kouho.jpg" alt="広報支援"></a></figure>
+    <figure><a href="./business.html"><div id="kouho" class="image"></div></a></figure>
     <div class="text">
         <h4>広報支援</h4>
         <div>
-            <div>
-                <p>GIVは、お客様の広報部としての活動を支援します。広報とは、「広く情報を知らせること」です。その方法には、ホームページや、ランディングページなどのWEBサイトを制作することや、カタログやチラシなどの紙媒体の制作、SNSなどのメディアの利用など様々な方法が考えられます。
+            <div class="service-introduction">
+                <p>GIVは、お客様の広報部としての活動を支援します。広報とは、「広く情報を知らせること」です。その方法には、ホームページや、ランディングページなどのWEBサイトを制作することや、カタログやチラシなどの紙媒体の制作、SNSなどのメディアの利用など様々な方法が考えられます。GIVは、お客様の思いをお伺いし、最も効果的な方法をご提案します。
                 </p>
-                <p>GIVは、お客様の思いをお伺いし、最も効果的な方法をご提案します。</p>
+                <a href=business.html>詳しくはこちら ≫</a>
             </div>
             <table>
-            <tr>
-            <th>サービス内容リスト</th>
-            </tr>
-            <tr>
-            <td>ホームページ、ランディングページ制作</td>
-            </tr>
-            <tr>
-            <td>ロゴ、バナー制作</td>
-            </tr>
-            <tr>
-            <td>会社案内、製品カタログ・パンフレット制作</td>
-            </tr>
-            <tr>
-            <td>動画制作</td>
-            </tr>
-            <tr>
-            <td>SNS運用支援</td>
-            </tr>    
+                <tr>
+                    <th>サービス内容リスト</th>
+                </tr>
+                <tr>
+                    <td>ホームページ、ランディングページ制作</td>
+                </tr>
+                <tr>
+                    <td>ロゴ、バナー制作</td>
+                </tr>
+                <tr>
+                    <td>会社案内、製品カタログ・パンフレット制作</td>
+                </tr>
+                <tr>
+                    <td>動画制作</td>
+                </tr>
+                <tr>
+                    <td>SNS運用支援</td>
+                </tr>    
+            </table>
+        </div>
+    </div>
+</div>
+<div class="service">
+    <figure><a href="./consulting.html"><div id="yorozu" class="image"></div></a></figure>
+    <div class="text">
+        <h4>よろず相談</h4>
+        <div>
+            <div class="service-introduction">
+                <p>弊社は、ITを通じて、お客様の課題が解決出来ないか、という視点でのご相談を承ることが出来ることが強みですが、税理士、社労士、行政書士や、それぞれの専門家と連携して、「こうした方が良い」というアドバイスではなく、「実際にどう解決していくか」を一緒に考えます。
+                </p>
+                <a href=consulting.html>詳しくはこちら ≫</a>
+            </div>
+            <table>
+                <tr>
+                    <th>サービス内容リスト</th>
+                </tr>
+                <tr>
+                    <td>個別相談</td>
+                </tr>
+                <tr>
+                    <td>グループ勉強会</td>
+                </tr>
             </table>
         </div>
     </div>
 </div>
 
 <div class="service">
-    <figure><a href="./consulting.html"><img src="../images/yorozu.jpg" alt="よろず相談"></a></figure>
+    <figure><a href="./lifestyle.html"><div id="kawara" class="image"></div></a></figure>
     <div class="text">
-    <h4>よろず相談</h4>
-    <p>弊社は、ITを通じて、お客様の課題が解決出来ないか、という視点でのご相談を承ることが出来ることが強みですが、税理士、社労士、行政書士や、それぞれの専門家と連携して、「こうした方が良い」というアドバイスではなく、「実際にどう解決していくか」を一緒に考えます。
-    </p>
-    <table>
-    <tr>
-    <th>サービス内容リスト</th>
-    </tr>
-    <tr>
-    <td>個別相談</td>
-    </tr>
-    <tr>
-    <td>グループ勉強会</td>
-    </tr>
-    </table>
+        <h4>かわら版</h4>
+        <div>
+            <div class="service-introduction">
+                <p>GIVは、2020年7月から、「川越経済新聞」を担当しています。その他、旅行情報の提供ポータルサイト「たびいこ」の運営もしています。
+                川越経済新聞を中心に、地域や世界中の人へ、楽しく、有益な情報をお伝えしていきます。
+                </p>
+                <a href=lifestyle.html>詳しくはこちら ≫</a>
+            </div>
+            <table>
+                <tr>
+                    <th>サービス内容リスト</th>
+                </tr>
+                <tr>
+                    <td>川越経済新聞</td>
+                </tr>
+                <tr>
+                    <td>たびいこ</td>
+                </tr>
+            </table>
+        </div>
     </div>
-    </div>
-
-<div class="service">
-    <figure><a href="./lifestyle.html"><img src="../images/kawara.jpg" alt="かわら版"></a></figure>
-    <div class="text">
-    <h4>かわら版</h4>
-    <p>GIVは、2020年7月から、「川越経済新聞」を担当しています。その他、旅行情報の提供ポータルサイト「たびいこ」の運営もしています。
-        川越経済新聞を中心に、地域や世界中の人へ、楽しく、有益な情報をお伝えしていきます。
-    </p>
-    <table>
-    <tr>
-    <th>サービス内容リスト</th>
-    </tr>
-    <tr>
-    <td>川越経済新聞</td>
-    </tr>
-    <tr>
-    <td>たびいこ</td>
-    </tr>
-    </table>
-    </div>
-    </div>
+</div>
 
 
 
