--- a/pages/works.html
+++ b/pages/works.html
@@ -76,24 +76,28 @@
     <div class="works_iv_item">
         <figure><img src="../images/nico_iv.jpg" alt=""></figure>
             <h4>利用者・求職者の「安心」のために！　「ホームページリニューアル」の必要性</h4>
-            <p>利用者様がホームページを見て信頼できる事業所かどうかを判断される場合もありますし、求職の方には自社の良さや雰囲気を伝えられるので、ホームページのリニューアルを考えていました。また、レイアウトの改善や、ブログ……</p>
+            <p>利用者様がホームページを見て信頼できる事業所かどうかを判断される場合もありますし、求職の方には自社の良さや雰囲気を伝えられるので、ホームページのリニューアルを……</p>
+            <a href=#>もっと見る ≫</a>
     </div>
     
     <div class="works_iv_item">
         <figure><img src="../images/powerdryer_iv.jpg" alt=""></figure>
         <h4>「未来へ繋ぐ」「時代と共に成長する」ホームページ制作で見えた、本当に伝えたいこと</h4>
-        <p>インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。インタビューの内容。</p>
+        <p>趣味から始めたことが仕事って止まないんですよ。面倒臭くないでしょ。できないことが面白くってね、上手くできないってことが悔しいし、できた時が面白いし。だけどね、……</p>
+        <a href=#>もっと見る ≫</a>
     </div>
     
     <div class="works_iv_item">
         <figure><img src="../images/giv_iv.jpg" alt=""></figure>
         <h4>「川越から世界へ」CEOが目指す先とは　第一歩となるホームページリニューアルの裏側も大公開</h4>
-        <p>CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」CEO「嵐の新曲いいね。」</p>
+        <p>お客様はもちろんのこと、関わる全ての人に『価値』を提供することを企業理念とし設立しました。その『価値』とは、『思い』の具現化だと考えます。……</p>
+        <a href=#>もっと見る ≫</a>
     </div>
 </div>
 
 <h3>私たちの制作や取り組みの一部をご紹介いたします。</h3>
 
+<div class="works-box">
 <div class="works-item">
     <figure><img src="../images/sharepages.jpg" alt="sharepages"></figure>
     <div class="text">
@@ -151,7 +155,102 @@
         </div>
     </div>
 </div>
-
+<div class="works-item">
+    <figure><img src="../images/sharepages.jpg" alt="sharepages"></figure>
+    <div class="text">
+        <h4>SharePages</h4>
+        <div class="label">
+            <ul>
+                <li>自社サービス</li>
+                <li>CMS</li>
+                <li>中小企業向け</li>
+            </ul>
+        </div>
+        <div>
+            <div>
+                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="works-item">
+    <figure><img src="../images/sharepages.jpg" alt="sharepages"></figure>
+    <div class="text">
+        <h4>SharePages</h4>
+        <div class="label">
+            <ul>
+                <li>自社サービス</li>
+                <li>CMS</li>
+                <li>中小企業向け</li>
+            </ul>
+        </div>
+        <div>
+            <div>
+                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="works-item">
+    <figure><img src="../images/sharepages.jpg" alt="sharepages"></figure>
+    <div class="text">
+        <h4>SharePages</h4>
+        <div class="label">
+            <ul>
+                <li>自社サービス</li>
+                <li>CMS</li>
+                <li>中小企業向け</li>
+            </ul>
+        </div>
+        <div>
+            <div>
+                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="works-item">
+    <figure><img src="../images/sharepages.jpg" alt="sharepages"></figure>
+    <div class="text">
+        <h4>SharePages</h4>
+        <div class="label">
+            <ul>
+                <li>自社サービス</li>
+                <li>CMS</li>
+                <li>中小企業向け</li>
+            </ul>
+        </div>
+        <div>
+            <div>
+                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="works-item">
+    <figure><img src="../images/sharepages.jpg" alt="sharepages"></figure>
+    <div class="text">
+        <h4>SharePages</h4>
+        <div class="label">
+            <ul>
+                <li>自社サービス</li>
+                <li>CMS</li>
+                <li>中小企業向け</li>
+            </ul>
+        </div>
+        <div>
+            <div>
+                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 </section>
 
 </div>
