--- a/pages/service.html
+++ b/pages/service.html
@@ -51,114 +51,90 @@
     </ul>
     </nav>
 
-<!--小さな端末用（800px以下端末）メニュー-->
-<nav id="menubar-s">
-<ul>
-    <li><a href="about.html">ABOUT</a></li>
-    <li><a href="service.html">SERVICE</a></li>
-    <li><a href="news.html">NEWS</a></li>
-    <li><a href="works.html">WORKS</a></li>
-    <li><a href="blog.html">BLOG</a></li>
-    <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</nav>
-
 <div class="inner" id="service">
-<div class="contents">
-
-<section>
-
-<h1>SERVICE</h1>
-
-<div class="service">
-    <figure><a href="./business.html"><div id="kouho" class="image"></div></a></figure>
-    <div class="text">
-        <h4>広報支援</h4>
-        <div>
-            <div class="service-introduction">
-                <p>GIVは、お客様の広報部としての活動を支援します。広報とは、「広く情報を知らせること」です。その方法には、ホームページや、ランディングページなどのWEBサイトを制作することや、カタログやチラシなどの紙媒体の制作、SNSなどのメディアの利用など様々な方法が考えられます。GIVは、お客様の思いをお伺いし、最も効果的な方法をご提案します。
-                </p>
-                <a href=business.html>詳しくはこちら ≫</a>
+    <div class="contents">
+        <section>
+            <h1>SERVICE</h1>
+            <div class="service">
+                <figure><a href="./business.html"><div id="kouho" class="image"></div></a></figure>
+                <div class="text">
+                    <h4>広報支援</h4>
+                    <div>
+                        <div class="service-introduction">
+                            <p>GIVは、お客様の広報部としての活動を支援します。広報とは、「広く情報を知らせること」です。その方法には、ホームページや、ランディングページなどのWEBサイトを制作することや、カタログやチラシなどの紙媒体の制作、SNSなどのメディアの利用など様々な方法が考えられます。GIVは、お客様の思いをお伺いし、最も効果的な方法をご提案します。</p>
+                            <a href=business.html>詳しくはこちら ≫</a>
+                        </div>
+                        <table>
+                            <tr>
+                                <th>サービス内容リスト</th>
+                            </tr>
+                            <tr>
+                                <td>ホームページ、ランディングページ制作</td>
+                            </tr>
+                            <tr>
+                                <td>ロゴ、バナー制作</td>
+                            </tr>
+                            <tr>
+                                <td>会社案内、製品カタログ・パンフレット制作</td>
+                            </tr>
+                            <tr>
+                                <td>動画制作</td>
+                            </tr>
+                            <tr>
+                                <td>SNS運用支援</td>
+                            </tr>    
+                        </table>
+                    </div>
+                </div>
             </div>
-            <table>
-                <tr>
-                    <th>サービス内容リスト</th>
-                </tr>
-                <tr>
-                    <td>ホームページ、ランディングページ制作</td>
-                </tr>
-                <tr>
-                    <td>ロゴ、バナー制作</td>
-                </tr>
-                <tr>
-                    <td>会社案内、製品カタログ・パンフレット制作</td>
-                </tr>
-                <tr>
-                    <td>動画制作</td>
-                </tr>
-                <tr>
-                    <td>SNS運用支援</td>
-                </tr>    
-            </table>
-        </div>
-    </div>
-</div>
-<div class="service">
-    <figure><a href="./consulting.html"><div id="yorozu" class="image"></div></a></figure>
-    <div class="text">
-        <h4>よろず相談</h4>
-        <div>
-            <div class="service-introduction">
-                <p>弊社は、ITを通じて、お客様の課題が解決出来ないか、という視点でのご相談を承ることが出来ることが強みですが、税理士、社労士、行政書士や、それぞれの専門家と連携して、「こうした方が良い」というアドバイスではなく、「実際にどう解決していくか」を一緒に考えます。
-                </p>
-                <a href=consulting.html>詳しくはこちら ≫</a>
+            <div class="service">
+                <figure><a href="./consulting.html"><div id="yorozu" class="image"></div></a></figure>
+                <div class="text">
+                    <h4>よろず相談</h4>
+                    <div>
+                        <div class="service-introduction">
+                            <p>弊社は、ITを通じて、お客様の課題が解決出来ないか、という視点でのご相談を承ることが出来ることが強みですが、税理士、社労士、行政書士や、それぞれの専門家と連携して、「こうした方が良い」というアドバイスではなく、「実際にどう解決していくか」を一緒に考えます。</p>
+                            <a href=consulting.html>詳しくはこちら ≫</a>
+                        </div>
+                        <table>
+                            <tr>
+                                <th>サービス内容リスト</th>
+                            </tr>
+                            <tr>
+                                <td>個別相談</td>
+                            </tr>
+                            <tr>
+                                <td>グループ勉強会</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <table>
-                <tr>
-                    <th>サービス内容リスト</th>
-                </tr>
-                <tr>
-                    <td>個別相談</td>
-                </tr>
-                <tr>
-                    <td>グループ勉強会</td>
-                </tr>
-            </table>
-        </div>
-    </div>
-</div>
-
-<div class="service">
-    <figure><a href="./lifestyle.html"><div id="kawara" class="image"></div></a></figure>
-    <div class="text">
-        <h4>かわら版</h4>
-        <div>
-            <div class="service-introduction">
-                <p>GIVは、2020年7月から、「川越経済新聞」を担当しています。その他、旅行情報の提供ポータルサイト「たびいこ」の運営もしています。
-                川越経済新聞を中心に、地域や世界中の人へ、楽しく、有益な情報をお伝えしていきます。
-                </p>
-                <a href=lifestyle.html>詳しくはこちら ≫</a>
+            <div class="service">
+                <figure><a href="./lifestyle.html"><div id="kawara" class="image"></div></a></figure>
+                <div class="text">
+                    <h4>かわら版</h4>
+                    <div>
+                        <div class="service-introduction">
+                            <p>GIVは、2020年7月から、「川越経済新聞」を担当しています。その他、旅行情報の提供ポータルサイト「たびいこ」の運営もしています。川越経済新聞を中心に、地域や世界中の人へ、楽しく、有益な情報をお伝えしていきます。</p>
+                            <a href=lifestyle.html>詳しくはこちら ≫</a>
+                        </div>
+                        <table>
+                            <tr>
+                                <th>サービス内容リスト</th>
+                            </tr>
+                            <tr>
+                                <td>川越経済新聞</td>
+                            </tr>
+                            <tr>
+                                <td>たびいこ</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <table>
-                <tr>
-                    <th>サービス内容リスト</th>
-                </tr>
-                <tr>
-                    <td>川越経済新聞</td>
-                </tr>
-                <tr>
-                    <td>たびいこ</td>
-                </tr>
-            </table>
-        </div>
+        </section>
     </div>
-</div>
-
-
-
-</section>
-
-</div>
 <!--/.contents-->
 </div>
 <!--/.inner-->
